2010-03-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #11696: External files with Umlauts/special chars in filename are not indexed
	* Fixed bug #12375: typo3temp got filled with thousands of EXTERNAL_URL* files
	* !!! Fixed bug #12254: Double wrap of rules subpart with template_css.tmpl (indexed_search)
	* Fixed bug #1436: Meta tag output in indexed search result breaks layout

2010-03-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13677: margin-bottom on images was missing in the "single image" rendering (thanks to Susanne Moog)

2010-03-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #13273: Improve caching framework dbBackend testcase to catch not deleted rows in tag table
	* Fixed bug #13273: Caching framework sub-select is slow because mysql does not use indexes on outer query

2010-03-27  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12794: t3lib_TStemplate::getFileName() handles path starting with media/ as magic
	* Fixed bug #13590: felogin adds field felogin_forgotHash to tca but does not add field to database (Thanks to Fabrizio Branca)

2010-03-26  Oliver Hader  <oliver@typo3.org>

	* Added feature #13697: Add possibility to retrieve extension version (thanks to Tolleiv Nietsch & Oliver Klee)

2010-03-26  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13775: Missing <tr> in "Admin Tools -> User Admin" (thanks to Stephan Kellermayr)

2010-03-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13813: Using ExtJS with debug should also use debug-files of adapter

2010-03-26  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up to #13554: Make the code in line with follow-up to #13739

2010-03-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13737: Unit test failures in scheduler if the extension is not installed (Thanks to Oliver Klee)
	* Follow-up to #13418: Removed a duplicate reset in tearDown of testcase